# seating_planner

./: CMakeLists.txt  README.md
include/: temp.txt
libs/: readme.txt
src/: Main.cpp  about.txt  classroomdetails.cpp  classroomdetails.h  classroomdetails.hpp  combinations.cpp  combinations.h  combinations.hpp  graphics.cpp  graphics.h  graphics.hpp  help.txt  help_about.cpp  help_about.h  help_about.hpp  kunal.txt  main.cpp  notes.txt  screens.cpp  screens.hpp  settings.cpp  settings.h  settings.hpp  temp.saf  universal.h  unix_specific.cpp  unix_specific.hpp
tests/: readme.txt  terminal_arrow_key_test1.cpp  terminal_arrow_key_test2.cpp
